--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -11,12 +11,16 @@ services:
     tty: true
     env_file:
       # Ensure that the variables in .env match the same variables in devcontainer.json
-      - .env
+      - .env.development
     volumes:
       - ..:/workspace
     # default command so things don't shut down after the process ends.
     ports:
       - 8000:8000
+    expose:
+      - "8000"
+    networks:
+      - local-net
   mysql:
     container_name: "map_app_db"
     build:
@@ -26,6 +30,13 @@ services:
     platform: linux/x86_64
     restart: always
     env_file:
-      - .env
+      - .env.development
     ports:
       - 3306:3306
+    expose:
+      - "3306"
+    networks:
+      - local-net
+networks:
+  local-net:
+    driver: bridge
