スポット関連APIのベースを作成

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     # M1マック向けのplatform設定
     platform: linux/x86_64
     restart: always
+    volumes:
+      - db-data:/var/lib/mysql
     env_file:
       - .env.development
     ports:
@@ -40,3 +42,6 @@ services:
 networks:
   local-net:
     driver: bridge
+volumes:
+  db-data:
+    driver: local
