--- a/.devcontainer/images/mysql/Dockerfile
+++ b/.devcontainer/images/mysql/Dockerfile
@@ -1,4 +1,4 @@
 FROM mysql:8.0
 ENV TZ=UTC
-COPY ./mysqld.cnf /etc/mysql/mysql.conf.d/mysqld.cnf
+COPY ./my.cnf /etc/mysql/conf.d/my.cnf
 COPY ./initdb.d /docker-entrypoint-initdb.d
