--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 fastapi
 uvicorn[standard]
 sqlalchemy
-mysqlclient
+mysql-connector-python
 autopep8
 flake8
 pydantic[email]
 passlib[bcrypt]
 python-multipart
 python-jose[cryptography]
+mangum
