各種設定ファイルを修正

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,8 +1,8 @@
-MYSQL_ROOT_PASSWORD=
+MYSQL_ROOT_PASSWORD=test
 MYSQL_HOST=mysql
 MYSQL_DB=map_app
 MYSQL_USER=app
-MYSQL_PASSWORD=
+MYSQL_PASSWORD=test
 SECRET_KEY=
 TOKEN_SALT=
-APP_ENV=
+APP_ENV=DEV
